--- a/CookPopularControl/Themes/TreeViewStyle.xaml
+++ b/CookPopularControl/Themes/TreeViewStyle.xaml
@@ -15,6 +15,8 @@
         <Setter Property="pc:TreeViewAssistant.HeaderIconNoItems" Value="{DynamicResource FileGeometry}" />
         <Setter Property="pc:TreeViewAssistant.HeaderIconFill" Value="{x:Static SystemColors.GrayTextBrush}" />
         <Setter Property="pc:TreeViewAssistant.IsShowHeaderIcon" Value="False" />
+        <Setter Property="pc:TreeViewAssistant.IsShowSelectedIcon" Value="False" />
+        <Setter Property="pc:TreeViewAssistant.SelectedIcon" Value="{DynamicResource SuccessGeometry}" />
     </Style>
 
     <Style x:Key="TreeViewShowHeaderIconStyle" TargetType="{x:Type TreeView}" BasedOn="{StaticResource DefaultTreeViewStyle}">
