--- a/CookPopularControl/Themes/ShapeStyle.xaml
+++ b/CookPopularControl/Themes/ShapeStyle.xaml
@@ -1,10 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls">
 
     <Style x:Key="DefaultDivideLineStyle" TargetType="{x:Type pc:DivideLine}">
-        <Setter Property="Stroke" Value="{DynamicResource PrimaryThemeBrush}" />
+        <Setter Property="Stroke" Value="{x:Static SystemColors.GrayTextBrush}" />
         <Setter Property="StrokeThickness" Value="1" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
