--- a/CookPopularControl/Themes/MessageDialogStyle.xaml
+++ b/CookPopularControl/Themes/MessageDialogStyle.xaml
@@ -41,7 +41,7 @@
         <Setter Property="ResizeMode" Value="NoResize" />
         <Setter Property="SizeToContent" Value="WidthAndHeight" />
         <Setter Property="ShowInTaskbar" Value="False" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="Focusable" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type win:MessageDialog}">
